--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,9 +25,9 @@ img {
 }
 
 h3 {
-  font-size: 56px;
-  font-family: Helvetica;
-  font-weight: 600;
+  font-size: 40px;
+  font-family: 'Pieta-Bold'; //Helvetica;
+  font-weight: 500;
   line-height: 1.07;
   letter-spacing: -0.005em;
   color: $black-alt;
