--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -66,7 +66,7 @@
 
     .grid-container {
       grid-template-columns: repeat(3, 1fr);
-      grid-column-gap: 30px;
+      grid-gap: 24px;
       align-items: stretch;
     }
 
@@ -108,6 +108,48 @@
       position: relative;
       display: grid;
       align-items: center;
+    }
+  }
+
+  section.about {
+    padding-bottom: 120px;
+    height: 900px; // temporary
+    background: #41A7ED;
+
+    .grid-container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 24px;
+      align-items: stretch;
+    }
+
+    .subsection.header {
+      grid-column: 1 / span 2;
+    }
+
+    h3 {
+      margin: 45px 0;
+      color: $white;
+    }
+  }
+
+  section.contact {
+    padding-bottom: 120px;
+    height: 900px; // temporary
+    background: #A81F31;
+
+    .grid-container {
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 24px;
+      align-items: stretch;
+    }
+
+    .subsection.header {
+      grid-column: 1 / span 2;
+    }
+
+    h3 {
+      margin: 45px 0;
+      color: $white;
     }
   }
 }
