--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -66,7 +66,8 @@
 
     .grid-container {
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 24px;
+      grid-row-gap: 0;
+      grid-column-gap: 24px;
       align-items: stretch;
     }
 
