made the site more mobile friendly

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -51,4 +51,10 @@
     .subsection-1 {
       margin-top: 60px;
     }
+
+    @media (max-width: 800px) {
+      .copyright {
+        font-size: 16px;
+      }
+    }
   }
