--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,6 @@
 $white: #FAFAFA;
-$black: #333;
-$black-alt: #111;
+$black: rgb(41,51,71); /*#333;*/
+$black-alt: rgba(10,10,10,0.9);
 $blue: #0070C9;
 
 /* General styles */
@@ -24,24 +24,23 @@ img {
   height: auto;
 }
 
-h3 {
-  font-size: 40px;
-  font-family: 'Pieta-Bold'; /* Helvetica; */
-  font-weight: 500;
-  line-height: 1.07;
-  letter-spacing: -0.005em;
-  color: $black-alt;
-  margin: 0;
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
-h4 {
-  font-size: 40px;
-  font-family: Helvetica;
-  font-weight: 600;
-  line-height: 1.07;
-  letter-spacing: -0.005em;
+h1 {
+  font-family: 'eurostile', sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
   color: $black;
-  margin: 0;
+}
+
+h2 {
+  font-family: europa, sans-serif;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: $black-alt;
 }
 
 p {
