--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -50,7 +50,7 @@ p {
   line-height: 1.38;
   letter-spacing: 0.011em;
   color: $black;
-  margin-top: 1.2em;
+  margin-top: 1.2rem;
   margin-bottom: 0;
 }
 
