--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -50,8 +50,8 @@ p {
   line-height: 1.38;
   letter-spacing: 0.011em;
   color: $black;
-  margin-top: 1.2rem;
-  margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 1.2rem;
 }
 
 a {
