--- a/src/components/Common/ImageCard.scss
+++ b/src/components/Common/ImageCard.scss
@@ -1,4 +1,36 @@
 .ImageCard {
-  @import '~styles/variables';
   padding: 8px;
+
+  .image-container {
+    position: relative;
+    display: grid;
+    align-items: center;
+  }
+
+  .img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.82);
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+    display: grid;
+    align-items: center;
+
+    h2, p {
+      margin: 0 50px;
+      color: white;
+    }
+
+    h2 {
+      margin-bottom: 8px;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
