--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,9 +30,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-family: 'eurostile', sans-serif;
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-family: 'Trebuchet MS';
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1.07;
+  letter-spacing: -0.005em;
   color: $black;
 }
 
