--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,5 +1,6 @@
 .Footer {
-  padding: 1.5rem 0;
+  padding-top: 7.5rem;
+  padding-bottom: 1.5rem;
   .grid-container {
     grid-template-columns: 1fr;
   }
