--- a/src/components/MyExperience.scss
+++ b/src/components/MyExperience.scss
@@ -1,5 +1,9 @@
 .MyExperience {
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   h1 {
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
   }
 }
