--- a/src/components/AboutMe.scss
+++ b/src/components/AboutMe.scss
@@ -2,7 +2,12 @@
   margin-top: 11.5rem;
   margin-bottom: 9.5rem;
 
+  .info {
+    padding: 1.5rem;
+  }
+
   .grid-container {
     align-items: center;
+    box-shadow:5px 5px 10px -5px rgba(0,0,0,0.75);
   }
 }
