--- a/src/components/MyExpertise.scss
+++ b/src/components/MyExpertise.scss
@@ -5,5 +5,9 @@
 
   h1 {
     grid-column: 1 / span 3;
+    border-top: 1px solid #0000002b;
+    border-bottom: 1px solid #0000002b;
+    padding: 12px 0;
+    margin-bottom: 60px;
   }
 }
