1st round of responsive changes

--- a/src/app.scss
+++ b/src/app.scss
@@ -50,6 +50,7 @@ a:hover {
 .grid-container {
   max-width: 1200px; /* Apple uses 1350px */
   margin: 0 auto;
+  padding: 0 1rem;
   text-align: center;
 
   display: grid;
