--- a/src/components/AboutMe.scss
+++ b/src/components/AboutMe.scss
@@ -2,6 +2,8 @@
   padding-top: 4rem;
   margin-top: 9.5rem;
   margin-bottom: 9.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 
   .info {
     padding: 1.5rem;
@@ -9,6 +11,13 @@
 
   .grid-container {
     align-items: center;
+    justify-items: center;
     box-shadow:5px 5px 10px -5px rgba(0,0,0,0.75);
+  }
+
+  @media (max-width: 767px) {
+    margin-top: 0;
+    padding-top: 5.5rem;
+    margin-bottom: 0.5rem;
   }
 }
