--- a/src/components/MyExperience.scss
+++ b/src/components/MyExperience.scss
@@ -11,4 +11,17 @@
     border-bottom: 1px solid #0000002b;
     padding: 12px 0;
   }
+
+  @media (max-width: 767px) {
+    padding-top: 0;
+
+    .grid-container {
+      display: block;
+    }
+
+    h1 {
+      margin-top: 0.2em;
+      margin-bottom: 0;
+    }
+  }
 }
