--- a/src/components/MyExpertise.scss
+++ b/src/components/MyExpertise.scss
@@ -10,4 +10,17 @@
     padding: 12px 0;
     margin-bottom: 60px;
   }
+
+  @media (max-width: 767px) {
+    padding-top: 0;
+
+    .grid-container {
+      display: block;
+    }
+
+    h1 {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
 }
