mobile margins & padding optimized

--- a/src/components/MyWork.scss
+++ b/src/components/MyWork.scss
@@ -15,11 +15,12 @@
     }
 
     h1 {
-      margin-bottom: 1.5rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
     }
 
     img {
-      margin-bottom: 1em;
+      margin-bottom: 1rem;
     }
   }
 }
