--- a/src/components/MyExperience.scss
+++ b/src/components/MyExperience.scss
@@ -20,8 +20,13 @@
     }
 
     h1 {
-      margin-top: 0.2em;
-      margin-bottom: 0;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    img {
+      padding: 1rem 0;
+      max-width: 60%;
     }
   }
 }
