--- a/src/components/MyExpertise.scss
+++ b/src/components/MyExpertise.scss
@@ -19,8 +19,13 @@
     }
 
     h1 {
-      margin-top: 0;
-      margin-bottom: 0;
+      margin-top: 2.5rem;
+      margin-bottom: 2.5rem;
+    }
+
+    img {
+      padding: 1rem 0;
+      max-width: 75%;
     }
   }
 }
