more margin & padding tweaking

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,7 +18,7 @@ h1 {
   font-weight: 600;
   line-height: 1.07;
   letter-spacing: -0.005em;
-  margin-bottom: 45px;
+  margin-bottom: 5rem;
 }
 
 h2 {
