--- a/src/components/AboutMe.scss
+++ b/src/components/AboutMe.scss
@@ -1,9 +1,8 @@
 .AboutMe {
-  padding-top: 4rem;
-  margin-top: 9.5rem;
-  margin-bottom: 9.5rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  padding-top: 15.5rem;
+  padding-bottom: 9.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 
   .info {
     padding: 1.5rem;
@@ -17,7 +16,8 @@
 
   @media (max-width: 767px) {
     margin-top: 0;
-    padding-top: 5.5rem;
+    padding-top: 6rem;
+    padding-bottom: 0.5rem;
     margin-bottom: 0.5rem;
   }
 }
