--- a/src/components/MyExpertise.scss
+++ b/src/components/MyExpertise.scss
@@ -8,7 +8,8 @@
     border-top: 1px solid #0000002b;
     border-bottom: 1px solid #0000002b;
     padding: 12px 0;
-    margin-bottom: 60px;
+    margin-top: 0;
+    margin-bottom: 3rem;
   }
 
   @media (max-width: 767px) {
@@ -19,12 +20,12 @@
     }
 
     h1 {
-      margin-top: 2.5rem;
-      margin-bottom: 2.5rem;
+      margin-top: 0.5rem;
+      margin-bottom: 2rem;
     }
 
     img {
-      padding: 1rem 0;
+      padding: 0;
       max-width: 75%;
     }
   }
